<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/chocolate_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:onClick="onCheckboxClicked"
        android:padding="10dp"
        android:text="@string/chocolate_syrup" />

    <CheckBox
        android:id="@+id/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/spinkles"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/crushed_nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/crushed_nuts"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/cherries"
        android:onClick="onCheckboxClicked"/>
    <CheckBox
        android:id="@+id/orio_cookies_crumbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/orio_cookies_crumbles"
        android:onClick="onCheckboxClicked"/>
    <Button
        android:id="@+id/getBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/show_toast" />
</LinearLayout>